Translate2 - Org/src/objects/MX_900IP__c.object
<CustomObject>
    <description>Traffic log of PBX</description>
    <fields>
        <fullName>BUSY__c</fullName>
        <label>発信-話中</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAY__c</fullName>
        <inlineHelpText>電話発着信日付</inlineHelpText>
        <label>DAY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DIALCALLS__c</fullName>
        <label>発信-呼量</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DIALTIMEAVG__c</fullName>
        <label>発信-平均保留時間</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DIALTIME__c</fullName>
        <label>発信-総保留時間</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DIAL__c</fullName>
        <inlineHelpText>外線発信の数内線発信も含む？</inlineHelpText>
        <label>発信</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXT__c</fullName>
        <label>内線着信呼数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INCMP15__c</fullName>
        <label>途中放棄 &lt; 15秒</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INCMP30__c</fullName>
        <label>途中放棄 &lt; 30秒</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INCMP5__c</fullName>
        <inlineHelpText>あまりに相手を待たせた為、相手が切ってしまった[途中放棄時間帯別呼数]</inlineHelpText>
        <label>途中放棄 &lt; 5秒</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INCMP60O__c</fullName>
        <label>途中放棄 &gt;= 60秒</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OVERFLOW__c</fullName>
        <inlineHelpText>発信のとき、相手を呼び出したとき、出るまでまち続けとうとう出なかった数</inlineHelpText>
        <label>発信-オーバーフロー呼</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RECEIVING__c</fullName>
        <inlineHelpText>外線着信の数内線も含む？</inlineHelpText>
        <label>着信</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RECIVINGCALLS__c</fullName>
        <inlineHelpText>稼働率みたいなもの、平均保留時間を1000secで割った数？</inlineHelpText>
        <label>着信-呼量</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RECIVINGTIMEAVG__c</fullName>
        <inlineHelpText>外線応答後、保留した平均時間、秒単位</inlineHelpText>
        <label>着信-平均保留時間</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RECIVINGTIME__c</fullName>
        <inlineHelpText>外線応答後、保留した総時間、秒単位</inlineHelpText>
        <label>着信-総保留時間</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REV15__c</fullName>
        <label>応答 &lt; 15秒</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REV30__c</fullName>
        <label>応答 &lt; 30秒</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REV5__c</fullName>
        <inlineHelpText>何秒未満で受話器をとったか？[応答時間帯別呼数]</inlineHelpText>
        <label>応答 &lt; 5秒</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REV60O__c</fullName>
        <label>応答 &gt;= 60秒</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIME__c</fullName>
        <inlineHelpText>電話発着信時刻１時間単位</inlineHelpText>
        <label>TIME</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>IF( 
ISNULL(  DAY__c  ), 
&quot;&quot;, 
CASE( MOD(    DAY__c   - DATE(1900, 1, 7), 7), 
0, &apos;7) 日&apos;, 
1, &apos;1) 月&apos;, 
2, &apos;2) 火&apos;, 
3, &apos;3) 水&apos;, 
4, &apos;4) 木&apos;, 
5, &apos;5) 金&apos;, 
&apos;6) 土&apos; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WEEK</label>
        <type>Text</type>
    </fields>
    <label>MX900IP</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>MX900IP#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>